fix_news_box_and_text_overflow

--- a/code/public/static/css/learn.css
+++ b/code/public/static/css/learn.css
@@ -1,5 +1,3 @@
-
-
 #notiOverlay{
     position: fixed;
     width: 25%;
@@ -48,4 +46,5 @@
     font-size: 18pt;
     font-family: serif;
     height: 300px;
+    overflow: auto;
 }
